# api_design_patterns

./: Cargo.toml
src/: handlers.rs  main.rs  tests.rs  types.rs
